Add debug stats endpoint and soak test
